node  modules installed  in my pc

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.18",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
