--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.18",
-    "nodemon": "^2.0.4",
     "rc-progress": "^3.0.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.4",
     "typescript": "^3.9.5"
   }
 }
